# exrandr

./: .gitignore  Makefile  README.md  pyproject.toml
src/exrandr/: __init__.py  __main__.py  cmd_factory.py  display.py  pattern_factory.py  patterns.py  prettyprinter.py  resolution.py  util.py
src/exrandr_tests/: test_exrandr.py
