[tool.poetry]
name = "exrandr"
version = "0.1.0"
description = ""
authors = ["Mardoqueu Pimentel <mardoqueu.pimentel@gmail.com>"]
packages = [
    { include = "exrandr", from = "src"}
]

[tool.poetry.dependencies]
python = "~3.10"
click = "^8.1.8"
attrs = "^25.3.0"
prettyprinter = "^0.18.0"
pytest = {version = "^8.3.5", optional = true}
pytest-cov = {version = "^6.1.1", optional = true}



[tool.poetry.scripts]
exrandr = "exrandr.__main__:run"

[tool.poetry.group.dev.dependencies]
ipython = "^8.13.0"


[tool.poetry.group.lint.dependencies]
autoflake = "^2.3.1"
isort = "^6.0.1"
black = "^25.1.0"
mypy = "^1.15.0"
flake8 = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
