[tool.poetry]
name = "exrandr"
version = "0.1.0"
description = ""
authors = ["Mardoqueu Pimentel <mardoqueu.pimentel@gmail.com>"]
packages = [
    { include = "exrandr", from = "src"}
]

[tool.poetry.dependencies]
python = "~3.10"
click = "^8.0.3"
attrs = "^21.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.12b0"
isort = "^5.10.1"
flake8 = "^4.0.1"
mypy = "^0.931"
autoflake = "^1.4"
pytest-cov = "^3.0.0"
ipython = "^8.0.1"

[tool.poetry.scripts]
exrandr = "exrandr.__main__:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
